# trygotham-Backend

./: .dockerignore  .gitignore  BACKEND_README.md  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  SOLANA_DEPLOYMENT.md  TESTING.md  docker-compose.yml  jest.config.json  jest.setup.ts  package.json  pnpm-workspace.yaml  tsconfig.json
examples/: README.md  create-census.js  get-stats.js  list-censuses.js  submit-proof.js
ios/: ARCHITECTURE.md  QUICKSTART.md  README.md
ios/zkCensus/: Package.swift
ios/zkCensus/App/: ContentView.swift  zkCensusApp.swift
ios/zkCensus/Core/Utilities/: KeychainManager.swift
ios/zkCensus/Features/Company/: CensusDetailView.swift
ios/zkCensus/Features/Onboarding/: CompanyOnboardingView.swift  OnboardingView.swift
ios/zkCensus/Features/PassportScanner/: PassportScannerView.swift
ios/zkCensus/Features/User/: UserDashboardView.swift
ios/zkCensus/Models/: PassportModels.swift  UserType.swift  ZKModels.swift
ios/zkCensus/Services/APIService/: APIClient.swift
ios/zkCensus/Services/PassportService/: PassportScannerService.swift
ios/zkCensus/Services/SolanaService/: SolanaService.swift
ios/zkCensus/Supporting/: Config.xcconfig  Info.plist
programs/census-program/: Anchor.toml  Cargo.toml
programs/census-program/src/: errors.rs  lib.rs  state.rs  utils.rs
programs/census-program/src/instructions/: close_census.rs  get_stats.rs  initialize_census.rs  mod.rs  submit_proof.rs  update_merkle_root.rs
programs/census-program/tests/: zk-census.ts
scripts/: deploy-program.sh
(+1 files in other folders)
