[package]
name = "zk-census"
version = "0.1.0"
description = "Privacy-preserving census program for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zk_census"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "~1.17.0"

[dev-dependencies]
solana-program-test = "~1.17.0"
solana-sdk = "~1.17.0"
